# flux-tui

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/workflows/: release-binaries.yml  release-please.yml
src/: main.rs
src/app/: actions.rs  config.rs  mod.rs  state.rs
src/event/: handler.rs  mod.rs
src/kubernetes/: client.rs  mod.rs  reconcile.rs
src/kubernetes/resources/: helmchart.rs  helmrelease.rs  kustomization.rs  mod.rs
src/ui/: draw.rs  layout.rs  mod.rs  theme.rs
src/ui/widgets/: mod.rs  resource_table.rs  status_bar.rs  tabs.rs
