[package]
name = "flux-tui"
version = "0.1.3"
edition = "2021"
description = "A minimalist TUI for managing Flux CD resources"
authors = ["Frank Bernhardt"]
license = "MIT"
repository = "https://github.com/frank-bee/flux-tui"
keywords = ["flux", "kubernetes", "tui", "gitops"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
tokio = { version = "1.43", features = ["full"] }
kube = { version = "0.99", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.6"
chrono = "0.4"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
